@@ -10,6 +10,7 @@ NEWS
   * Add example apparmor spawn-fcgi abstraction
   * Use autoreconf instead of calling tools manually
   * Add more flags to extra-warning flags
+  * Check return values of setuid, setgid, setgroups, initgroups, write
 
 - 1.6.3 - 2009-09-23
   * Fix unix socket mode change to work without specifying user/group for socket
